recursion.lessons.recursion.koch.SquareKoch.scala.error
SquareKoch:15: error: ':' expected but ')' found.
def motif(length:Double,levels){
                              ^SquareKoch:39: error: identifier expected but '}' found.
}
^